--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>A NetLogoWeb Models of Beetles and Beans </h1>
+<h1>NetLogoWeb Models of Beetles and Beans </h1>
 <p>created by Sugat Dabholkar</p>
+
+<p> A base model  </p> 
+<p> A model with bean type preference </p>   
+  
 </body>
 </html>
