--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <h1>NetLogoWeb Models of Beetles and Beans </h1>
 <p>created by Sugat Dabholkar</p>
 
-<p> A base model  </p> 
-<p> A model with bean type preference </p>   
+<p><a href="https://dsugat.github.io/beansAndBeetles/beetles-and-beans.html">A base model</a></p> 
+
+<p><a href="https://dsugat.github.io/beansAndBeetles/beetles-and-beans_preference.html">A model with bean type preference</a></p>  
+  
+   
+  
   
 </body>
 </html>
