--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>NetLogoWeb Models of Beetles and Beans </h1>
-<p>created by Sugat Dabholkar</p>
+<h1>NetLogoWeb Models for easy access and use </h1>
 
 <p><a href="https://dsugat.github.io/beansAndBeetles/beetles-and-beans.html">A base model</a></p> 
 
