--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <body>
 <h1>NetLogoWeb Models for easy access and use </h1>
 
-<p><a href="https://dsugat.github.io/beansAndBeetles/beetles-and-beans.html">A base model</a></p> 
+<p><a href="https://dsugat.github.io/NetLogoModels/ants.html">The Ants model from NetLogo Models Library</a></p> 
 
-<p><a href="https://dsugat.github.io/beansAndBeetles/beetles-and-beans_preference.html">A model with bean type preference</a></p>  
-  
+<p><a href="https://dsugat.github.io/NetLogoModels/Fire Simple.htmll">The Fire Simple model from NetLogo Models Library</a></p>  
    
   
   
