--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <body>
 <h1>NetLogoWeb Models for easy access and use </h1>
 
-<p><a href="https://dsugat.github.io/NetLogoModels/ants.html">The Ants model from NetLogo Models Library</a></p> 
+<p><a href="https://dsugat.github.io/NetLogoModels/Ants.html">The Ants model from NetLogo Models Library</a></p> 
 
-<p><a href="https://dsugat.github.io/NetLogoModels/Fire Simple.htmll">The Fire Simple model from NetLogo Models Library</a></p>  
+<p><a href="https://dsugat.github.io/NetLogoModels/Fire Simple.html">The Fire Simple model from NetLogo Models Library</a></p>  
    
   
   
