--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <body>
 <h1>NetLogoWeb Models for easy access and use </h1>
 
-<p><a href="https://dsugat.github.io/NetLogoModels/Ants.html">The Ants model from NetLogo Models Library</a></p> 
-
-<p><a href="https://dsugat.github.io/NetLogoModels/Fire Simple.html">The Fire Simple model from NetLogo Models Library</a></p>  
+<p>Models from NetLogo Models Library</p>
    
-  
+<p><a href="https://dsugat.github.io/NetLogoModels/Ants.html">Ants model</a> from NetLogo Models Library</p> 
+
+<p><a href="https://dsugat.github.io/NetLogoModels/Fire Simple.html">Fire Simple model</a> </p>  
+   
   
 </body>
 </html>
