--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>NetLogoWeb Models for easy access and use </h1>
+<h1> Agent-based Models to develop insights into neuronal signaling </h1>
 
-<p>Models from NetLogo Models Library</p>
+<h2> A basic random walk model of particles in a chamber </h2>
    
-<p><a href="https://dsugat.github.io/NetLogoModels/Ants.html">Ants model</a> from NetLogo Models Library</p> 
+<p><a href="https://dsugat.github.io/ABM_Neuro/Particles Diffusion.html">Particles Diffusion</a> </p> 
 
-<p><a href="https://dsugat.github.io/NetLogoModels/Fire Simple.html">Fire Simple model</a> </p>  
-   
+
   
 </body>
 </html>
