--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <h2> A basic random walk model of particles in a chamber </h2>
    
-<p><a href="https://dsugat.github.io/ABM_Neuro/Particles Diffusion.html">Particles Diffusion</a> </p> 
+<p><a href="https://dsugat.github.io/ABM_Neuro/particles diffusion.html">Particles Diffusion</a> </p> 
 
 
   
