--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <body>
 <h1> Agent-based Models to develop insights into neuronal signaling </h1>
 
-<h2> A basic random walk model of particles in a chamber </h2>
+<h2> A model of diffusion of particles and drift in an electric field </h2>
    
-<p><a href="https://dsugat.github.io/ABM_Neuro/particles diffusion.html">Particles Diffusion</a> </p> 
+<p><a href="https://dsugat.github.io/ABM_Neuro/particles diffusion and drift.html">Particles Diffusion</a> </p> 
 
 
   
