--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <h2> A model of diffusion of particles and drift in an electric field </h2>
    
-<p><a href="https://dsugat.github.io/ABM_Neuro/particles diffusion and drift.html">Particles Diffusion</a> </p> 
+<p><a href="https://dsugat.github.io/ABM_Neuro/particles diffusion and drift.html">Particles Diffusion and Drift</a> </p> 
 
 
   
