--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <body>
 <h1> Agent-based Models to develop insights into neuronal signaling </h1>
 
-<h2> A model of diffusion of particles and drift in an electric field </h2>
+<h2>Processes models<h2>
+   
+<h3> A model of diffusion of particles and drift in an electric field </h3>
    
 <p><a href="https://dsugat.github.io/ABM_Neuro/particles diffusion and drift.html">Particles Diffusion and Drift</a> </p> 
 
 
+<h2>Making models biologically realistic<h2>
+
+
+<h2>Ion channels and action potential<h2>
   
 </body>
 </html>
